--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,6 @@
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.datasource.url=jdbc:mysql://localhost:3306/umsb2b?createDatabaseIfNotExist=true&useUnicode=true
+
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
