--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,5 @@ eureka.client.fetch-registry=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Bharath@123
+spring.datasource.url=jdbc:mysql://localhost:3306/umsb2b?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+
